# tgvkbot

./: .gitignore  Dockerfile  bot.py  config.py  pyproject.toml  requirements.txt  telegram.py  vk_messages.py
