[tool.poetry]
name = "tgvkbot"
version = "1.0.0"
description = "Общайтесь в VK через Telegram бота"
authors = ["Kylmakalle <24507532+Kylmakalle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
ujson = "^5.9.0"
sentry-sdk = "^1.38.0"
aiohttp = "^3.9.1"
aiogram = "1.2.2"
aiovk = "1.3.0"
django = "2.0.4"
dj-database-url = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
