[tool.poetry]
name = "tgvkbot"
version = "1.0.0"
description = "Общайтесь в VK через Telegram бота"
authors = ["Kylmakalle <24507532+Kylmakalle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
ujson = "^5.9.0"
sentry-sdk = "~1.39.0"
aiohttp = "^3.9.1"
aiogram = "3.2.0"
aiovk = "4.1.0"
django = "2.0.4"
dj-database-url = "0.5.0"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
